# aumos-video-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_video_engine/: __init__.py  main.py  settings.py
src/aumos_video_engine/adapters/: __init__.py  annotation_exporter.py  batch_processor.py  domain_specific.py  export_handler.py  format_converter.py  kafka.py  metadata_extractor.py  motion_generator.py  open_sora_adapter.py  privacy_client.py  privacy_enforcer.py  quality_evaluator.py  repositories.py  scene_compositor.py  style_transfer.py  temporal_engine.py  upscaler.py  video_watermarker.py  watermark_embedder.py
src/aumos_video_engine/adapters/generators/: __init__.py  blenderproc_scene.py  model_registry.py  stable_video_diffusion.py
src/aumos_video_engine/api/: __init__.py  dependencies.py  router.py  schemas.py
src/aumos_video_engine/core/: __init__.py  interfaces.py  models.py  services.py
src/aumos_video_engine/seeds/scene_templates/: manufacturing_rare.json  surveillance_rare.json  traffic_rare.json
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_models.py  test_privacy.py  test_services.py
